# mt5-py

./: .gitignore  README.md  REALTIME_NO_TRADE_BUG_REVIEW.md  REALTIME_NO_TRADE_RUNBOOK.md  RELEASE_NOTES.md  build_exe.ps1  config copy.yaml  config.btcusd.m15.offline.yaml  config.btcusd.m15.yaml  config.ema_cross_atr.yaml  config.example.yaml  config.xauusd.m1.yaml  config.xauusdm.m1.yaml  config.yaml  mt5_quant.spec  pyproject.toml  runGui.bat  sample_btc.csv  sample_mt5_calendar.csv  sample_xau.csv
logs/: risk-overrides.json  runtime-events-2026-05-19.jsonl  runtime-events-2026-05-20.jsonl  runtime-events-2026-05-21.jsonl
mql5/: ExportEconomicCalendar.ex5  ExportEconomicCalendar.mq5
profiles/: xau.runtime.yaml
reports/: equity_curve.csv  summary.json  trades.csv
reports/btcusd_m15/: equity_curve.csv  summary.json  trades.csv
reports/run_001/: summary.json  trades.csv
reports/smoke/: equity_curve.csv  summary.json
reports/xauusd_m1/: equity_curve.csv
src/mt5_quant/: __init__.py  backtest.py  cli.py  config.py  data.py  diagnostics.py  execution.py  guardrails.py  gui.py  launcher_profiles.py  live.py  models.py  news_calendar.py  optimizer.py  risk.py  risk_overrides.py  runtime_events.py
src/mt5_quant/strategy/: __init__.py  base.py  btc_m15_regime.py  ema_cross_atr.py  ma_cross_atr.py  (+1 more)
src/mt5_quant_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: btc_backtest_report_template.md  btc_optimization_template.yaml
tests/: test_runtime_events.py  test_runtime_tools.py  test_strategy.py
